--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "axios": "^1.7.9",
     "concurrently": "^8.0.1",
     "d3": "^7.9.0",
-    "next": "^15.0.4-canary.45",
+    "next": "^14.2.21",
+    "pnpm": "^9.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "^10.0.6"
