--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.9",
     "concurrently": "^8.0.1",
     "d3": "^7.9.0",
+    "lucide-react": "^0.469.0",
     "next": "^14.2.21",
     "pnpm": "^9.15.0",
     "react": "18.2.0",
