--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,12 @@ torch
 mmh3
 pandas
 numpy
-langchain-anthropic==0.3.1
+# langchain-anthropic==0.3.1
 langchain-community
 langchain_huggingface
+# langchain-ollama
+langchain-openai
+# langchain-together
 langgraph
 python-dotenv
 pydantic
