--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
+    "@observablehq/plot": "^0.6.16",
     "autoprefixer": "10.4.14",
     "axios": "^1.7.9",
     "concurrently": "^8.0.1",
