--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^6.1.10",
+    "@mui/lab": "^6.0.0-beta.25",
     "@mui/material": "^6.1.10",
     "@observablehq/plot": "^0.6.16",
     "autoprefixer": "10.4.14",
