--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^6.1.10",
     "@mui/lab": "^6.0.0-beta.25",
     "@mui/material": "^6.1.10",
+    "@mui/x-data-grid": "^7.25.0",
     "@observablehq/plot": "^0.6.16",
     "autoprefixer": "10.4.14",
     "axios": "^1.7.9",
@@ -31,6 +32,7 @@
   },
   "packageManager": "pnpm@9.14.4+sha512.c8180b3fbe4e4bca02c94234717896b5529740a6cbadf19fa78254270403ea2f27d4e1d46a08a0f56c89b63dc8ebfd3ee53326da720273794e6200fcf0d184ab",
   "devDependencies": {
+    "@simbathesailor/use-what-changed": "^2.0.0",
     "@types/d3": "^7.4.3",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -39,7 +41,6 @@
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "@simbathesailor/use-what-changed": "^2.0.0"
+    "typescript": "^5"
   }
 }
