--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "concurrently": "^8.0.1",
     "d3": "^7.9.0",
     "lucide-react": "^0.469.0",
+    "material-react-table": "^3.1.0",
     "next": "^14.2.21",
     "pnpm": "^9.15.0",
     "react": "18.2.0",
