--- a/.kube/deployment.yaml
+++ b/.kube/deployment.yaml
@@ -28,6 +28,7 @@ spec:
         - name: bdiviz-app
           # Put your own image here
           image: edenwu/bdi-viz-react:amd64
+          imagePullPolicy: "Always"
           ports:
             # This is the port we'll expose to the internet eventually
             - name: web
