feat: add kube service deployment

--- a/.kube/config
+++ b/.kube/config
@@ -6,7 +6,7 @@ clusters:
 contexts:
 - context:
     cluster: hsrn
-    namespace: hsrn
+    namespace: bdiviz
     user: oauth2|CILogon|http://cilogon.org/serverE/users/92751
   name: hsrn
 current-context: hsrn
