--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.3.5",
     "react-toastify": "^10.0.6",
-    "recharts": "^2.15.1"
+    "recharts": "^2.15.1",
+    "uuid": "^11.1.0"
   },
   "packageManager": "pnpm@9.14.4+sha512.c8180b3fbe4e4bca02c94234717896b5529740a6cbadf19fa78254270403ea2f27d4e1d46a08a0f56c89b63dc8ebfd3ee53326da720273794e6200fcf0d184ab",
   "devDependencies": {
