--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@mui/material": "^6.1.10",
     "@mui/x-data-grid": "^7.25.0",
     "@observablehq/plot": "^0.6.16",
-    "@types/recharts": "^1.8.29",
+    "@uiw/react-split": "^5.9.3",
     "autoprefixer": "10.4.14",
     "axios": "^1.7.9",
     "concurrently": "^8.0.1",
