feat: for user study task 1

--- a/.kube/ingress.yml
+++ b/.kube/ingress.yml
@@ -4,7 +4,6 @@ metadata:
   name: bdiviz
   labels:
     app: bdiviz
-    source: hsrn-tutorial
   annotations:
     # Use the HAProxy ingress controller (currently the only option)
     kubernetes.io/ingress.class: haproxy
@@ -13,6 +12,8 @@ metadata:
     haproxy.org/ssl-redirect-code: "301"
     # Instruct HAProxy to provide the end-user's address in the 'X-Forwarded-For' header
     haproxy.org/forwarded-for: "true"
+    haproxy.org/auth-type: basic-auth
+    haproxy.org/auth-secret: bdiviz-ingress-auth
 spec:
   rules:
     # You can have multiple rules in one Ingress, or create multiple Ingresses
