--- a/.kube/deployment.yaml
+++ b/.kube/deployment.yaml
@@ -27,7 +27,7 @@ spec:
         # Here's our Flask container
         - name: bdiviz-app
           # Put your own image here
-          image: edenwu/bdi-viz-react:amd64
+          image: edenwu/bdi-viz-react:task1
           imagePullPolicy: "Always"
           ports:
             # This is the port we'll expose to the internet eventually
@@ -35,5 +35,5 @@ spec:
               containerPort: 3000
           resources:
             requests:
-              cpu: "10m"
+              cpu: "20m"
               memory: "1Gi"
