bugfix: for task 2

--- a/.kube/ingress.yml
+++ b/.kube/ingress.yml
@@ -16,11 +16,7 @@ metadata:
     haproxy.org/auth-secret: bdiviz-ingress-auth
 spec:
   rules:
-    # You can have multiple rules in one Ingress, or create multiple Ingresses
     - host: bdiviz.users.hsrn.nyu.edu
-      # You are welcome to take advantage of our *.users.hsrn.nyu.edu domain,
-      # or you can use your own. In that case, you might have to provide a
-      # certificate to enable HTTPS
       http:
         paths:
           - path: /
@@ -28,5 +24,15 @@ spec:
             backend:
               service:
                 name: bdiviz
+                port:
+                  number: 3000
+    - host: bdiviz-task2.users.hsrn.nyu.edu
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: bdiviz-task2
                 port:
                   number: 3000
